--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
       </div>
       <div class="card shadow">
         <h3 style="margin:0 0 10px;font-size:20px;color:#ef4444">특별함이 있는<br>고퀄리티 현수막</h3>
-        <img src="JS현수막사장님.png" alt="JS현수막 사장님" loading="lazy">
+        <img src="JS1.png" alt="JS현수막 사장님" loading="lazy">
       </div>
     </div>
   </section>
@@ -214,3 +214,4 @@
   <script>document.getElementById('y').textContent=new Date().getFullYear()</script>
 </body>
 </html>
+
