--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     .legal{display:flex;gap:10px;flex-wrap:wrap;align-items:center}
 
     @media (max-width:880px){.hero .wrap{grid-template-columns:1fr}.steps{grid-template-columns:1fr 1fr}.reviews{grid-template-columns:1fr}.gallery{grid-template-columns:1fr 1fr}}
-    @media (max-width:560px){.steps{grid-template-columns:1fr}.gallery{grid-template-columns:1fr}}
+    @media (max-width:560px){.steps{grid-template-columns:1fr}.gallery{grid-template-columns:1fr}.cta-bar .inner{justify-content:flex-start;flex-wrap:nowrap;overflow-x:auto;-webkit-overflow-scrolling:touch;padding-bottom:6px}.cta-bar .inner .btn{flex:0 0 auto;white-space:nowrap;font-size:14px;padding:10px 12px}.cta-bar .inner{gap:8px}}.gallery{grid-template-columns:1fr}}
   </style>
 </head>
 <body>
@@ -97,7 +97,7 @@
       </div>
       <div class="card shadow">
         <h3 style="margin:0 0 10px;font-size:20px;color:#ef4444">특별함이 있는<br>고퀄리티 현수막</h3>
-        <img src="JS1.png" alt="JS현수막 사장님" loading="lazy">
+        <img src="JS현수막사장님.png" alt="JS현수막 사장님" loading="lazy">
       </div>
     </div>
   </section>
@@ -214,4 +214,3 @@
   <script>document.getElementById('y').textContent=new Date().getFullYear()</script>
 </body>
 </html>
-
