--- a/index.html
+++ b/index.html
@@ -69,6 +69,26 @@
 
     @media (max-width:880px){.hero .wrap{grid-template-columns:1fr}.steps{grid-template-columns:1fr 1fr}.reviews{grid-template-columns:1fr}.gallery{grid-template-columns:1fr 1fr}}
     @media (max-width:560px){.steps{grid-template-columns:1fr}.gallery{grid-template-columns:1fr}}
+
+    /* ========== 추가: 모바일 전용 수정 ========== */
+    @media (max-width:560px){
+      /* 1. 상단 네비게이션 버튼/배지 줄바꿈 방지 */
+      .nav{flex-wrap:nowrap;overflow-x:auto;-webkit-overflow-scrolling:touch}
+      .logo{white-space:nowrap}
+      .cta{flex-wrap:nowrap}
+
+      /* 1-추가: 하단 CTA 버튼 한 줄 3개 */
+      .cta-bar .inner{display:grid;grid-template-columns:repeat(3,1fr);gap:8px}
+      .cta-bar .inner a{font-size:14px;padding:10px 0;text-align:center}
+
+      /* 2. 샘플이미지: 2열 */
+      .gallery{grid-template-columns:1fr 1fr}
+
+      /* 3. 샘플이미지와 감성문구 세로 배치 */
+      .section .container{flex-direction:column}
+      .section .container > div{width:100%}
+      .section .container h2{text-align:center}
+    }
   </style>
 </head>
 <body>
@@ -93,7 +113,6 @@
         <h1 class="headline">그날의 감동, <span style="color:#4f46e5">JS현수막</span>이 완성합니다</h1>
         <p class="sub">사진만 보내주세요. 빠른 시안 확인 → 당일 출력 → 안전 포장 배송까지 한 번에.
           네이버 스토어에서 <b>안전 결제</b>로 편하게 주문하세요.</p>
-        
       </div>
       <div class="card shadow">
         <h3 style="margin:0 0 10px;font-size:20px;color:#ef4444">특별함이 있는<br>고퀄리티 현수막</h3>
@@ -117,7 +136,7 @@
         </div>
       </div>
       <div style="flex:1;display:flex;flex-direction:column;justify-content:flex-start">
-        <h2>자주 찾는 <span style=\"color:#10b981\">감성 문구</span></h2>
+        <h2>자주 찾는 <span style="color:#10b981">감성 문구</span></h2>
         <div class="list" style="flex:1;display:flex;flex-direction:column;justify-content:center">
           <div class="li">그냥 지나칠 순 없지</div>
           <div class="li">60번째 생신을 축하드립니다.</div>
@@ -139,7 +158,6 @@
         <div class="step"><b>3. 시안 확인</b> 시안 승인 후 바로 출력</div>
         <div class="step"><b>4. 발송</b> 안전 포장 후 신속 배송</div>
       </div>
-      
     </div>
   </section>
 
