--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <meta property="og:image" content="/og-image.jpg" />
   <meta name="theme-color" content="#f9fafb" />
   <link rel="icon" href="/favicon.ico" />
+
   <style>
     :root{--bg:#f9fafb;--card:#f9fafb;--muted:#6b7280;--brand:#4f46e5;--brand2:#10b981;--text:#111827;--text2:#374151;--kakao:#ffdb69;--call:#cee397}
     *{box-sizing:border-box} html,body{height:100%}
@@ -25,7 +26,15 @@
     .logo{display:flex;align-items:center;gap:10px;font-weight:700;letter-spacing:.3px}
     .logo .badge{font-size:12px;color:#4338ca;background:rgba(99,102,241,.12);padding:4px 8px;border-radius:999px;border:1px solid rgba(99,102,241,.25)}
     .cta{display:flex;gap:10px;flex-wrap:wrap}
-    .btn{display:inline-flex;align-items:center;gap:10px;padding:12px 16px;border-radius:12px;border:1px solid rgba(0,0,0,.08);transition:.2s;background:#ffffff;color:var(--text)}
+
+    /* 버튼 기본: 항상 가운데 정렬 */
+    .btn{
+      display:flex;align-items:center;justify-content:center;
+      gap:10px;padding:12px 16px;border-radius:12px;
+      border:1px solid rgba(0,0,0,.08);transition:.2s;
+      background:#ffffff;color:var(--text);
+      text-align:center;line-height:1.2;
+    }
     .btn:hover{transform:translateY(-1px);border-color:rgba(0,0,0,.2)}
     .btn.brand{background:linear-gradient(135deg,var(--brand),#6366f1);border:0;color:white}
     .btn.kakao{background:var(--kakao);border:0;color:#111827;font-weight:600}
@@ -67,24 +76,32 @@
     footer{padding:40px 0;color:var(--muted);font-size:13px}
     .legal{display:flex;gap:10px;flex-wrap:wrap;align-items:center}
 
-    @media (max-width:880px){.hero .wrap{grid-template-columns:1fr}.steps{grid-template-columns:1fr 1fr}.reviews{grid-template-columns:1fr}.gallery{grid-template-columns:1fr 1fr}}
-    @media (max-width:560px){.steps{grid-template-columns:1fr}.gallery{grid-template-columns:1fr}}
+    /* 태블릿 */
+    @media (max-width:880px){
+      .hero .wrap{grid-template-columns:1fr}
+      .steps{grid-template-columns:1fr 1fr}
+      .reviews{grid-template-columns:1fr}
+      .gallery{grid-template-columns:1fr 1fr}
+    }
 
-    /* ========== 추가: 모바일 전용 수정 ========== */
+    /* 모바일 최적화 */
     @media (max-width:560px){
-      /* 1. 상단 네비게이션 버튼/배지 줄바꿈 방지 */
+      .steps{grid-template-columns:1fr}
+
+      /* 1) 헤더: 배지/버튼 한 줄 + 버튼 글씨 줄바꿈 방지 */
       .nav{flex-wrap:nowrap;overflow-x:auto;-webkit-overflow-scrolling:touch}
       .logo{white-space:nowrap}
       .cta{flex-wrap:nowrap}
+      .cta .btn{white-space:nowrap;font-size:13.5px;padding:10px 12px}
 
-      /* 1-추가: 하단 CTA 버튼 한 줄 3개 */
+      /* 1-추가) 하단 CTA 3개 한 줄 + 텍스트 정렬 */
       .cta-bar .inner{display:grid;grid-template-columns:repeat(3,1fr);gap:8px}
-      .cta-bar .inner a{font-size:14px;padding:10px 0;text-align:center}
+      .cta-bar .inner a{font-size:14px;padding:10px 0;text-align:center;white-space:nowrap}
 
-      /* 2. 샘플이미지: 2열 */
+      /* 2) 샘플이미지 2열 */
       .gallery{grid-template-columns:1fr 1fr}
 
-      /* 3. 샘플이미지와 감성문구 세로 배치 */
+      /* 3) 샘플이미지 아래 감성문구로 재배치(세로 스택) */
       .section .container{flex-direction:column}
       .section .container > div{width:100%}
       .section .container h2{text-align:center}
