--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="ko">
 <head>
+<meta name="naver-site-verification" content="3e1f2f470f0f096e273b097a797f38828706e587" />
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>JS현수막 | 칠순·환갑·퇴임 맞춤 현수막 – 네이버 스토어 연결</title>
@@ -249,3 +250,4 @@
   <script>document.getElementById('y').textContent=new Date().getFullYear()</script>
 </body>
 </html>
+
