--- a/index.html
+++ b/index.html
@@ -1,20 +1,30 @@
 <!doctype html>
 <html lang="ko">
 <head>
-<meta name="naver-site-verification" content="3e1f2f470f0f096e273b097a797f38828706e587" />
-<meta name="google-site-verification" content="sVDmRcMU0uKY14hXxyP4J1ssr4h4Gz-ErfDhBLnInBM" />
+  <meta name="naver-site-verification" content="3e1f2f470f0f096e273b097a797f38828706e587" />
+  <meta name="google-site-verification" content="sVDmRcMU0uKY14hXxyP4J1ssr4h4Gz-ErfDhBLnInBM" />
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+
   <title>JS현수막 | 칠순·환갑·퇴임 맞춤 현수막 – 네이버 스토어 연결</title>
   <meta name="description" content="JS현수막 공식 랜딩페이지. 칠순·환갑·생신·퇴임 맞춤 현수막 제작. 빠른 시안, 당일 출력, 네이버 스토어에서 안전 결제." />
   <meta name="format-detection" content="telephone=no" />
+
+  <!-- Open Graph (공유용 미리보기) -->
   <meta property="og:title" content="JS현수막" />
   <meta property="og:description" content="특별한 날, 감동을 채우는 맞춤 현수막" />
   <meta property="og:type" content="website" />
   <meta property="og:locale" content="ko_KR" />
   <meta property="og:image" content="/og-image.jpg" />
+
   <meta name="theme-color" content="#f9fafb" />
-  <link rel="icon" href="/favicon.ico" />
+
+  <!-- Favicon -->
+  <link rel="icon" href="favicon.ico" type="image/x-icon" />
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon.png" />
+  <link rel="apple-touch-icon" sizes="180x180" href="favicon.png" />
+  <link rel="shortcut icon" href="favicon.png" type="image/png" />
+</head>
 
   <style>
     :root{--bg:#f9fafb;--card:#f9fafb;--muted:#6b7280;--brand:#4f46e5;--brand2:#10b981;--text:#111827;--text2:#374151;--kakao:#ffdb69;--call:#cee397}
@@ -251,5 +261,6 @@
   <script>document.getElementById('y').textContent=new Date().getFullYear()</script>
 </body>
 </html>
+
 
 
