--- a/index.html
+++ b/index.html
@@ -125,7 +125,8 @@
   <header>
     <div class="container nav">
       <div class="logo">
-        <svg width="28" height="28" viewBox="0 0 24 24" fill="none" aria-hidden="true"><path d="M4 12a8 8 0 1 1 16 0v6.5a1.5 1.5 0 0 1-3 0V12a5 5 0 1 0-10 0v6.5a1.5 1.5 0 0 1-3 0V12Z" fill="#6366f1"/><circle cx="12" cy="12" r="2.5" fill="#10b981"/></svg>
+        <!-- 기존 SVG 대신 이미지 로고 -->
+        <img src="logo.png" alt="JS현수막 로고" style="height:40px; vertical-align:middle;">
         JS현수막 <span class="badge">공식 페이지</span>
       </div>
       <div class="cta">
@@ -261,6 +262,7 @@
   <script>document.getElementById('y').textContent=new Date().getFullYear()</script>
 </body>
 </html>
+
 
 
 
