--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
   <link rel="icon" type="image/png" sizes="32x32" href="favicon.png" />
   <link rel="apple-touch-icon" sizes="180x180" href="favicon.png" />
   <link rel="shortcut icon" href="favicon.png" type="image/png" />
+<meta property="og:image" content="https://jsamuel-kr.github.io/70party/og-image.jpg" />
 
+  
   <style>
     :root{--bg:#f9fafb;--card:#f9fafb;--muted:#6b7280;--brand:#4f46e5;--brand2:#10b981;--text:#111827;--text2:#374151;--kakao:#ffdb69;--call:#cee397}
     *{box-sizing:border-box} html,body{height:100%}
@@ -261,6 +263,7 @@
   <script>document.getElementById('y').textContent=new Date().getFullYear()</script>
 </body>
 </html>
+
 
 
 
