--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <title>JS현수막 | 칠순·환갑·퇴임 맞춤 현수막 – 네이버 스토어 연결</title>
+  <title>JS현수막 | 칠순, 환갑, 퇴임 각종 행사 현수막</title>
   <meta name="description" content="JS현수막 공식 랜딩페이지. 칠순·환갑·생신·퇴임 맞춤 현수막 제작. 빠른 시안, 당일 출력, 네이버 스토어에서 안전 결제." />
   <meta name="format-detection" content="telephone=no" />
 
@@ -263,6 +263,7 @@
   <script>document.getElementById('y').textContent=new Date().getFullYear()</script>
 </body>
 </html>
+
 
 
 
