--- a/index.html
+++ b/index.html
@@ -140,10 +140,16 @@
   <section class="hero">
     <div class="container wrap">
       <div>
-        <div class="pill">칠순·환갑·퇴임·생신 맞춤 디자인</div>
-        <h1 class="headline"> 그날의 감동,<br> <span style="color:#4f46e5">JS현수막</span>이 완성합니다 </h1>
-        <p class="sub">사진만 보내주세요. 빠른 시안 확인 → 당일 출력 → 안전 포장 배송까지 한 번에.
-          네이버 스토어에서 <b>안전 결제</b>로 편하게 주문하세요.</p>
+       <div class="pill">칠순·환갑·퇴임·생신 맞춤 디자인</div>
+<h1 class="headline">
+  그날의 감동,<br>
+  <span style="color:#4f46e5">JS현수막</span>이 완성합니다
+</h1>
+<p class="sub">
+  사진만 보내주세요. 빠른 시안 확인 → 당일 출력 → 안전 포장 배송까지 한 번에.
+  네이버 스토어에서 <b>안전 결제</b>로 편하게 주문하세요.
+</p>
+
       </div>
       <div class="card shadow">
         <h3 style="margin:0 0 10px;font-size:20px;color:#ef4444">특별함이 있는<br>고퀄리티 현수막</h3>
@@ -263,6 +269,7 @@
   <script>document.getElementById('y').textContent=new Date().getFullYear()</script>
 </body>
 </html>
+
 
 
 
