--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
   <meta property="og:description" content="특별한 날, 감동을 채우는 맞춤 현수막" />
   <meta property="og:type" content="website" />
   <meta property="og:locale" content="ko_KR" />
-  <meta property="og:image" content="/og-image.jpg" />
+  <meta property="og:image" content="https://jsamuel-kr.github.io/70party/og-image.png" />
 
   <meta name="theme-color" content="#f9fafb" />
 
   <!-- Favicon -->
-  <link rel="icon" href="favicon.ico" type="image/x-icon" />
-  <link rel="icon" type="image/png" sizes="32x32" href="favicon.png" />
-  <link rel="apple-touch-icon" sizes="180x180" href="favicon.png" />
-  <link rel="shortcut icon" href="favicon.png" type="image/png" />
-<meta property="og:image" content="https://jsamuel-kr.github.io/70party/og-image.jpg" />
+  <link rel="icon" type="image/png" sizes="32x32" href="./favicon.png" />
+  <link rel="apple-touch-icon" sizes="180x180" href="./favicon.png" />
+  <link rel="shortcut icon" href="./favicon.png" type="image/png" />
+</head>
+
 
   
   <style>
@@ -269,6 +269,7 @@
   <script>document.getElementById('y').textContent=new Date().getFullYear()</script>
 </body>
 </html>
+
 
 
 
